<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AboutTerms">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/terms_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <TextView
                android:id="@+id/terms_header"
                style="@style/AboutHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_header" />

            <TextView
                android:id="@+id/terms"
                style="@style/AboutText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_1" />

            <TextView
                android:id="@+id/terms_changes_header"
                style="@style/AboutHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_changes_1" />

            <TextView
                android:id="@+id/terms_changes"
                style="@style/AboutText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_changes_2" />

            <TextView
                android:id="@+id/terms_contact_header"
                style="@style/AboutHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_contact_1" />

            <TextView
                android:id="@+id/terms_contact"
                style="@style/AboutText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_contact_2" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>