<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tag_edit_layout_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.TagEditRecycler">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tag_edit_header_bar"
        style="android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/tag_recycler"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/edit_tag_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_tag_edit_title"
            android:textColor="#000000"
            android:textSize="@dimen/fragment_tag_edit_title_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/add_tag_btn"
            style="@style/TagButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/img_desc_tag_edit_add_tag"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/edit_tag_title"
            app:layout_constraintRight_toLeftOf="@id/delete_tag_btn"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_add_black_24dp" />

        <ImageButton
            android:id="@+id/delete_tag_btn"
            style="@style/TagButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/img_desc_tag_edit_done"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_done_black_24dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tag_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tag_edit_header_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>